add dependencies (grammy, dotenv)

--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "author": "Husan Eshonqulov"
+  "author": "Husan Eshonqulov",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "grammy": "^1.21.1"
+  }
 }
