--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "grammy": "^1.21.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "typescript": "^5.3.3"
   }
 }
