--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "grammy": "^1.21.1"
+    "grammy": "^1.21.1",
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
