--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:dev": "nodemon ./src/index.ts"
   },
   "dependencies": {
+    "@grammyjs/conversations": "^1.2.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.1",
     "mongoose": "^8.2.0"
