--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "author": "Husan Eshonqulov",
   "scripts": {
     "build": "tsc",
-    "start": "node ./dist/index.js",
-    "start:dev": "nodemon ./src/index.ts"
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "start:dev": "NODE_ENV=development nodemon ./src/index.ts"
   },
   "dependencies": {
     "@grammyjs/conversations": "^1.2.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.1",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "winston": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
