--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc",
     "start": "NODE_ENV=production node ./dist/index.js",
-    "start:dev": "NODE_ENV=development nodemon ./src/index.ts"
+    "start:dev": "NODE_ENV=development nodemon ./src/index.ts",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@grammyjs/conversations": "^1.2.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/node": "^20.11.24",
     "nodemon": "^3.1.0",
+    "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   }
