--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "NODE_ENV=production node ./dist/index.js",
     "start:dev": "NODE_ENV=development nodemon ./src/index.ts",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "prepare": "husky"
   },
   "dependencies": {
     "@grammyjs/conversations": "^1.2.0",
@@ -19,9 +20,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.1.0",
     "prettier": "3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
