--- a/.eslintrc
+++ b/.eslintrc
@@ -3,18 +3,18 @@
   "extends": [
     "airbnb-base",
     "plugin:@typescript-eslint/recommended",
-    "prettier",
+    "prettier"
   ],
   "plugins": ["@typescript-eslint", "prettier"],
   "env": {
     "node": true,
-    "es6": true,
+    "es6": true
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "error"
   },
   "parserOptions": {
     "ecmaVersion": 2020,
-    "sourceType": "module",
+    "sourceType": "module"
   },
 }
