--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "NODE_ENV=production node ./dist/index.js",
     "start:dev": "NODE_ENV=development nodemon ./src/index.ts",
     "format": "prettier . --write",
+    "lint": "eslint --fix",
     "prepare": "husky"
   },
   "dependencies": {
