--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "es6": true
   },
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "eslint-plugin-import/extensions": "always"
   },
   "parserOptions": {
     "ecmaVersion": 2020,
