--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@grammyjs/conversations": "^1.2.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.1",
+    "i18next": "^23.10.1",
+    "i18next-fs-backend": "^2.3.1",
     "mongoose": "^8.2.0",
     "winston": "^3.12.0"
   },
   "devDependencies": {
+    "@types/i18next-fs-backend": "^1.1.5",
     "@types/node": "^20.11.24",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
